--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "type": "module",
   "scripts": {
-    "test": "mocha",
+    "test": "mocha \"test/**/*.js\"",
     "serve": "python -m SimpleHTTPServer"
   },
   "repository": {
