--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -11,7 +11,12 @@
         "sourceType": "module"
     },
     "rules": {
-        "import/extensions": ["error", { "js": "always" }],
+        "import/extensions": [
+            "error",
+            {
+                "js": "always"
+            }
+        ],
         "linebreak-style": 0
     }
 }
